--- a/NN_shared.ipynb
+++ b/NN_shared.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyND8CbTzvxQEpqrI4CGeB3+",
+      "authorship_tag": "ABX9TyPC/OZDSDArr7qIWiDprGHq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,8 +160,8 @@
         "    target_columns = ['delta_x_position', 'delta_y_position', 'delta_theta', 'delta_velocity', 'delta_yaw_angle',\n",
         "                      'delta_yaw_rate', 'delta_slip_angle', 'delta_front_wheel', 'delta_back_wheel']  # L to T\n",
         "\n",
-        "    # Train the model - returns the dir where the model and the tensorboard got saved\n",
-        "    model_dir = train_model(df, input_columns, target_columns, model_name=\"check3\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n",
+        "    # Train the model: returns the directory where the model saved\n",
+        "    model_dir = train_model(df, input_columns, target_columns, model_name=\"check\", num_epochs=10, batch_size=128, learning_rate=0.001) # Don't forget change the hidden layers!\n",
         "\n",
         "    # Show the training process on TensorBoard\n",
         "    %load_ext tensorboard\n",
